# ons-hs

./: LICENSE  README.md  cabal.project.local  ons-hs.cabal  run-lstar-perm.sh  run-lstar.sh  stack.yaml
app/: ExampleAutomata.hs  FileAutomata.hs  FoSolver.hs  IO.hs  LStar.hs  LStarPerm.hs  Main.hs  Minimise.hs  OnsAutomata.hs  OnsQuotient.hs  Teacher.hs
src/: Automata.hs  EquivariantMap.hs  EquivariantSet.hs  Nominal.hs  Orbit.hs  OrbitList.hs  Permutable.hs  Quotient.hs  Support.hs
src/Nominal/: Atom.hs  Class.hs  Products.hs  Support.hs
src/Orbit/: Class.hs  Products.hs
src/Support/: OrdList.hs  Rat.hs  Set.hs
test/: Bench.hs  Spec.hs  SpecMap.hs  SpecPermutable.hs  SpecSet.hs  SpecUtils.hs
