name:                ons-hs
version:             0.1.0.0
synopsis:            Implementation of the ONS (Ordered Nominal Sets) library in Haskell
description:         Nominal sets are structured infinite sets. They have symmetries which make them finitely representable. This library provides basic manipulation of them for the total order symmetry. It includes: products, sums, maps and sets. Can work with custom data types.
homepage:            https://gitlab.science.ru.nl/moerman/ons-hs
license:             MIT
license-file:        LICENSE
author:              Joshua Moerman
maintainer:          haskell@joshuamoerman.nl
copyright:           Joshua Moerman
category:            Unclassified
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EquivariantMap
                     , EquivariantSet
                     , Nominal
                     , Nominal.Class
                     , Nominal.Products
                     , OrbitList
                     , Support
                     , Support.Rat
                     , Support.OrdList
                     , Support.Set
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , data-ordlist
                     , MemoTrie
  default-language:    Haskell2010

executable ons-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ons-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

benchmark ons-hs-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Bench.hs
  build-depends:       base
                     , criterion
                     , deepseq
                     , ons-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

test-suite ons-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ons-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.science.ru.nl/moerman/ons-hs
