cabal-version:       2.2
name:                ons-hs
version:             0.2.2.0
synopsis:            Implementation of the ONS (Ordered Nominal Sets) library in Haskell
description:         Nominal sets are structured infinite sets. They have symmetries which make them finitely representable. This library provides basic manipulation of them for the total order symmetry. It includes: products, sums, maps and sets. Can work with custom data types.
homepage:            https://github.com/Jaxan/ons-hs
license:             EUPL-1.2
license-file:        LICENSE
author:              Joshua Moerman
maintainer:          haskell@joshuamoerman.nl
copyright:           (c) 2017-2024 Joshua Moerman
build-type:          Simple
extra-source-files:  README.md

common stuff
  build-depends:
    base >= 4.17 && < 5,
    containers
  default-language: Haskell2010

library
  import: stuff
  hs-source-dirs: src
  exposed-modules:
    Automata,
    EquivariantMap,
    EquivariantSet,
    Nominal,
    Nominal.Class,
    Nominal.Products,
    OrbitList,
    Quotient,
    Support,
    Support.OrdList,
    Support.Rat,
    Support.Set
  build-depends:
    data-ordlist,
    MemoTrie

executable ons-hs-solver
  import: stuff
  hs-source-dirs: app
  main-is: FoSolver.hs
  build-depends: ons-hs

executable ons-hs-lstar
  import: stuff
  hs-source-dirs: app
  main-is: LStar.hs
  build-depends:
    mtl,
    ons-hs
  other-modules:
    ExampleAutomata,
    IO

executable ons-hs-minimise
  import: stuff
  hs-source-dirs: app
  main-is: Minimise.hs
  build-depends:
    megaparsec,
    mtl,
    ons-hs,
    parser-combinators
  other-modules:
    ExampleAutomata,
    FileAutomata,
    IO

benchmark ons-hs-bench
  import: stuff
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Bench.hs
  build-depends:
    deepseq,
    ons-hs,
    tasty-bench

test-suite ons-hs-test
  import: stuff
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    SpecMap,
    SpecSet,
    SpecUtils
  build-depends:
    ons-hs,
    tasty,
    tasty-hunit,
    tasty-quickcheck

source-repository head
  type: git
  location: https://github.com/Jaxan/ons-hs
